--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 02:29:00 AM</p>
+    <p class="lastupdate">09/10/2020 02:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.8&#176;F</td>
+        <td class="data">58.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.8&#176;F</td>
+        <td class="data">58.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.8&#176;F</td>
+        <td class="data">58.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.9&#176;F</td>
+        <td class="data">47.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.908 inHg (0.014)</td>
+        <td class="data">29.913 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.3&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="02:11:01 AM">
-            29.913</span><br/>
+          <span title="02:31:01 AM">
+            29.915</span><br/>
           <span title="12:01:00 AM">
             29.890</span>
         </td>
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          172
+          169
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 11 hours, 42 minutes</td>
+      <td class="data">8 days, 11 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 11 hours, 42 minutes</td>
+      <td class="data">8 days, 11 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
