--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 04:09:00 AM</p>
+    <p class="lastupdate">09/10/2020 04:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.5&#176;F</td>
+        <td class="data">56.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.5&#176;F</td>
+        <td class="data">56.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.5&#176;F</td>
+        <td class="data">56.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.6&#176;F</td>
+        <td class="data">47.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">72%</td>
+        <td class="data">73%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.926 inHg (0.028)</td>
+        <td class="data">29.925 inHg (0.024)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.4&#176;F</td>
+        <td class="data">72.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">42%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.9</span><br/>
-          <span title="03:41:45 AM">
-            56.5</span>
+          <span title="04:10:07 AM">
+            56.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="07:08:29 AM (Wednesday)">
-            56.5</span>
+          <span title="04:10:07 AM (Thursday)">
+            56.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:41:45 AM" class="loval">
-            56.5</span>
+          <span title="04:10:07 AM" class="loval">
+            56.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:08:29 AM (Wednesday)" class="loval">
-            56.5</span>
+          <span title="04:10:07 AM (Thursday)" class="loval">
+            56.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:24:07 AM">
-            72</span><br/>
+          <span title="04:11:05 AM">
+            73</span><br/>
           <span title="12:06:48 AM">
             60</span>
         </td>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:00 AM">
             76.0</span><br/>
-          <span title="03:26:01 AM">
-            72.9</span>
+          <span title="04:13:01 AM">
+            72.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 13 hours, 22 minutes</td>
+      <td class="data">8 days, 13 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 13 hours, 22 minutes</td>
+      <td class="data">8 days, 13 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
