--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 07:14:00 AM</p>
+    <p class="lastupdate">09/10/2020 07:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.0&#176;F</td>
+        <td class="data">46.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">76%</td>
+        <td class="data">75%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.979 inHg (0.054)</td>
+        <td class="data">29.981 inHg (0.057)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:12:01 AM">
-            29.980</span><br/>
+          <span title="07:14:01 AM">
+            29.982</span><br/>
           <span title="12:01:00 AM">
             29.890</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:12:01 AM (Thursday)">
-            29.980</span><br/>
+          <span title="07:14:01 AM (Thursday)">
+            29.982</span><br/>
           <span title="03:40:02 PM (Tuesday)">
             29.560</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          161
+          163
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 16 hours, 27 minutes</td>
+      <td class="data">8 days, 16 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 16 hours, 27 minutes</td>
+      <td class="data">8 days, 16 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
